implement entries generator